# gb-emulator

./: Cargo.toml  README.md  flake.nix  test_headless.sh  worksetup.nvim
src/: clock.rs  cpu.rs  flags.rs  gpu.rs  gui.rs  input.rs  main.rs  memory.rs  tests.rs  tui.rs
src/opcodes/: cbprefixed.json  mod.rs  unprefixed.json
