[package]
name = "gb-emulator"
version = "0.1.0"
edition = "2024"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
